<?xml version="1.0"?>
<package format="2">
  <name>robotont_support</name>
  <version>0.0.0</version>
  <description>The robotont_support package</description>
  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <maintainer email="karl.kruusamae@ut.ee">Karl Kruusamäe</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
